--- a/doc/Makefile
+++ b/doc/Makefile
@@ -45,12 +45,12 @@ CONFIG_CLEAN_FILES = Doxyfile
 SOURCES =
 DIST_SOURCES =
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /home/julian/devel/artvertiser/missing --run aclocal-1.10
-AMTAR = ${SHELL} /home/julian/devel/artvertiser/missing --run tar
-AUTOCONF = ${SHELL} /home/julian/devel/artvertiser/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/julian/devel/artvertiser/missing --run autoheader
-AUTOMAKE = ${SHELL} /home/julian/devel/artvertiser/missing --run automake-1.10
-AWK = gawk
+ACLOCAL = ${SHELL} /home/artvertiser/Desktop/working/The-Artvertiser/missing --run aclocal-1.10
+AMTAR = ${SHELL} /home/artvertiser/Desktop/working/The-Artvertiser/missing --run tar
+AUTOCONF = ${SHELL} /home/artvertiser/Desktop/working/The-Artvertiser/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/artvertiser/Desktop/working/The-Artvertiser/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/artvertiser/Desktop/working/The-Artvertiser/missing --run automake-1.10
+AWK = mawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
 CFLAGS = -g -O2
@@ -84,7 +84,7 @@ LDFLAGS =
 LIBOBJS = 
 LIBS = 
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /home/julian/devel/artvertiser/missing --run makeinfo
+MAKEINFO = ${SHELL} /home/artvertiser/Desktop/working/The-Artvertiser/missing --run makeinfo
 MKDIR_P = /bin/mkdir -p
 OBJEXT = o
 OPENCV_CFLAGS = -I/usr/local/include/opencv  
@@ -110,10 +110,10 @@ X_CFLAGS =
 X_EXTRA_LIBS = 
 X_LIBS = 
 X_PRE_LIBS =  -lSM -lICE
-abs_builddir = /home/julian/devel/artvertiser/doc
-abs_srcdir = /home/julian/devel/artvertiser/doc
-abs_top_builddir = /home/julian/devel/artvertiser
-abs_top_srcdir = /home/julian/devel/artvertiser
+abs_builddir = /home/artvertiser/Desktop/working/The-Artvertiser/doc
+abs_srcdir = /home/artvertiser/Desktop/working/The-Artvertiser/doc
+abs_top_builddir = /home/artvertiser/Desktop/working/The-Artvertiser
+abs_top_srcdir = /home/artvertiser/Desktop/working/The-Artvertiser
 ac_ct_CC = gcc
 ac_ct_CXX = g++
 acx_pthread_config = 
@@ -142,7 +142,7 @@ host_vendor = pc
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = $(SHELL) /home/julian/devel/artvertiser/install-sh
+install_sh = $(SHELL) /home/artvertiser/Desktop/working/The-Artvertiser/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
