- replaced older YAPE point (yape::perform_one_point()) with newer, nicer one from OpenCV::LDetector (yape::perform_one_point_2(), newer version of YAPE). LDetect code is provided for reference in cvplanardetect.cpp/.h but not compiled into the project - multithreaded yape::raw_detect (see yape::raw_detect_mt()) - scale fix to FProfiler timing code - exposed tau setting for yape, changed default from 10 to 25
--> please re-train existing classifiers

	modified:   artvertiser.cbp
	modified:   artvertiser.layout
	modified:   artvertiser/FProfiler/FProfiler.cpp
	modified:   artvertiser/FProfiler/FProfiler.h
	modified:   artvertiser/FProfiler/FSemaphore.h
	modified:   artvertiser/FProfiler/FTime.h
	modified:   artvertiser/artvertiser.cpp
	modified:   garfeild/keypoints/yape.cpp
	modified:   garfeild/keypoints/yape.h
	new file:   garfeild/viewsets/cvplanardetect.cpp
	new file:   garfeild/viewsets/cvplanardetect.h
	modified:   garfeild/viewsets/planar_object_recognizer.cpp
	modified:   garfeild/viewsets/planar_object_recognizer.h

--- a/artvertiser.cbp
+++ b/artvertiser.cbp
@@ -75,6 +75,8 @@
 		<Unit filename="garfeild/lightcalib/tri.cpp" />
 		<Unit filename="garfeild/viewsets/affine_image_generator.cpp" />
 		<Unit filename="garfeild/viewsets/affine_image_generator.h" />
+		<Unit filename="garfeild/viewsets/cvplanardetect.cpp" />
+		<Unit filename="garfeild/viewsets/cvplanardetect.h" />
 		<Unit filename="garfeild/viewsets/example_generator.h" />
 		<Unit filename="garfeild/viewsets/image_class_example.cpp" />
 		<Unit filename="garfeild/viewsets/image_class_example.h" />
