- misc speed tweaks - start of MatrixTracker system
	modified:   Makefile
	modified:   Makefile.am
	modified:   artvertiser.cbp
	modified:   artvertiser/Makefile
	new file:   artvertiser/MatrixTracker/Makefile
	new file:   artvertiser/MatrixTracker/MatrixTracker.cpp
	new file:   artvertiser/MatrixTracker/MatrixTracker.h
	new file:   artvertiser/MatrixTracker/libofxVectorMath.a
	new file:   artvertiser/MatrixTracker/ofxMatrix3x3.cpp
	new file:   artvertiser/MatrixTracker/ofxMatrix3x3.h
	new file:   artvertiser/MatrixTracker/ofxMatrix4x4.cpp
	new file:   artvertiser/MatrixTracker/ofxMatrix4x4.h
	new file:   artvertiser/MatrixTracker/ofxPoint2f.h
	new file:   artvertiser/MatrixTracker/ofxPoint3f.h
	new file:   artvertiser/MatrixTracker/ofxPoint4f.h
	new file:   artvertiser/MatrixTracker/ofxQuaternion.cpp
	new file:   artvertiser/MatrixTracker/ofxQuaternion.h
	new file:   artvertiser/MatrixTracker/ofxVec2f.h
	new file:   artvertiser/MatrixTracker/ofxVec3f.h
	new file:   artvertiser/MatrixTracker/ofxVec4f.h
	new file:   artvertiser/MatrixTracker/ofxVectorMath.h
	modified:   artvertiser/artvertiser.cpp
	modified:   artvertiser/calibmodel.cpp
	new file:   artvertiser/matrixtracker.cpp
	modified:   artvertiser/multigrab.cpp
	modified:   artvertiser/multithreadcapture.cpp
	modified:   garfeild/keypoints/yape.cpp
	modified:   garfeild/viewsets/affine_image_generator.h
	modified:   garfeild/viewsets/planar_object_recognizer.cpp
	modified:   garfeild/viewsets/planar_object_recognizer.h

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,2 +1,2 @@
-SUBDIRS = starter garfeild doc artvertiser 
+SUBDIRS = starter garfeild doc artvertiser artvertiser/FProfiler artvertiser/ofxVectorMath
 EXTRA_DIST = autogen.sh
