--- a/artvertiser.cbp
+++ b/artvertiser.cbp
@@ -36,6 +36,21 @@
 		<Unit filename="artvertiser/FProfiler/FThread.h" />
 		<Unit filename="artvertiser/FProfiler/FTime.cpp" />
 		<Unit filename="artvertiser/FProfiler/FTime.h" />
+		<Unit filename="artvertiser/MatrixTracker/MatrixTracker.cpp" />
+		<Unit filename="artvertiser/MatrixTracker/MatrixTracker.h" />
+		<Unit filename="artvertiser/MatrixTracker/ofxMatrix3x3.cpp" />
+		<Unit filename="artvertiser/MatrixTracker/ofxMatrix3x3.h" />
+		<Unit filename="artvertiser/MatrixTracker/ofxMatrix4x4.cpp" />
+		<Unit filename="artvertiser/MatrixTracker/ofxMatrix4x4.h" />
+		<Unit filename="artvertiser/MatrixTracker/ofxPoint2f.h" />
+		<Unit filename="artvertiser/MatrixTracker/ofxPoint3f.h" />
+		<Unit filename="artvertiser/MatrixTracker/ofxPoint4f.h" />
+		<Unit filename="artvertiser/MatrixTracker/ofxQuaternion.cpp" />
+		<Unit filename="artvertiser/MatrixTracker/ofxQuaternion.h" />
+		<Unit filename="artvertiser/MatrixTracker/ofxVec2f.h" />
+		<Unit filename="artvertiser/MatrixTracker/ofxVec3f.h" />
+		<Unit filename="artvertiser/MatrixTracker/ofxVec4f.h" />
+		<Unit filename="artvertiser/MatrixTracker/ofxVectorMath.h" />
 		<Unit filename="artvertiser/artvertiser.cpp" />
 		<Unit filename="artvertiser/calibmodel.cpp" />
 		<Unit filename="artvertiser/calibmodel.h" />
