--- a/artvertiser/FProfiler/Makefile
+++ b/artvertiser/FProfiler/Makefile
@@ -4,6 +4,9 @@ CPPFLAGS=-g -o2
 OUT=libfprofiler.a
 OBJ=FProfiler.o FTime.o FThread.o
 
+%.o: %.cpp $(wildcard *.h)
+	$(COMPILE.cpp) $(OUTPUT_OPTION) $<
+
 $(OUT): $(OBJ)
 	ar rcs $(OUT) $(OBJ)
 
