- detection now happens in a separate thread - matrix tracking disabled (for now)
	modified:   artvertiser/FProfiler/FTime.cpp
	modified:   artvertiser/FProfiler/FTime.h
	modified:   artvertiser/MatrixTracker/Makefile
	modified:   artvertiser/MatrixTracker/MatrixTracker.cpp
	modified:   artvertiser/MatrixTracker/MatrixTracker.h
	modified:   artvertiser/artvertiser.cpp
	modified:   artvertiser/calibmodel.cpp
	modified:   artvertiser/multigrab.cpp
	modified:   artvertiser/multigrab.h
	modified:   artvertiser/multithreadcapture.cpp
	modified:   artvertiser/multithreadcapture.h

--- a/artvertiser/MatrixTracker/Makefile
+++ b/artvertiser/MatrixTracker/Makefile
@@ -4,7 +4,7 @@ CPPFLAGS=-g -o2 -I/usr/local/include/opencv
 OUT=libMatrixTracker.a
 OBJ=MatrixTracker.o ofxMatrix3x3.o ofxMatrix4x4.o ofxQuaternion.o 
 
-%.o: %.cpp $(wildcard *.h)
+%.o: %.cpp $(wildcard *.h) $(wildcard ../FProfiler/*.h) 
 	$(COMPILE.cpp) $(OUTPUT_OPTION) $<
 
 $(OUT): $(OBJ)
