--- a/artvertiser/MatrixTracker/Makefile
+++ b/artvertiser/MatrixTracker/Makefile
@@ -1,13 +1,10 @@
 CC=gcc 
-CPPFLAGS=-g -o2 -I/usr/local/include/opencv
+CPPFLAGS= -g -O3 -mtune=native -msse3  -I/usr/local/include/opencv
 
 OUT=libMatrixTracker.a
-OBJ=MatrixTracker.o ofxMatrix3x3.o ofxMatrix4x4.o ofxQuaternion.o 
+OBJ=MatrixTracker.o ofxMatrix3x3.o ofxMatrix4x4.o ofxQuaternion.o
 
-%.o: %.cpp $(wildcard *.h) $(wildcard ../FProfiler/*.h) 
-	$(COMPILE.cpp) $(OUTPUT_OPTION) $<
-
-$(OUT): $(OBJ)
+$(OUT): $(OBJ) $(wildcard *.h) $(wildcard ../FProfiler/*.h)
 	ar rcs $(OUT) $(OBJ)
 
 profile: CPPFLAGS+=-DPROFILE
