switchable render complete - switch caches with keypress - specificy caches with multiple -m command line, or -ml with xml file   loading
	modified:   Makefile
	modified:   artvertiser/Makefile
	modified:   artvertiser/artvertiser.cpp
	modified:   artvertiser/calibmodel.cpp
	modified:   artvertiser/calibmodel.h
	new file:   artvertiser/models.xml
	modified:   artvertiser/multigrab.cpp
	modified:   artvertiser/multigrab.h
	modified:   artvertiser/multithreadcapture.cpp
	modified:   artvertiser/multithreadcapture.h
	new file:   artvertiser/ofxXmlSettings/Makefile
	new file:   artvertiser/ofxXmlSettings/ofxXmlSettings.cpp
	new file:   artvertiser/ofxXmlSettings/ofxXmlSettings.h
	new file:   artvertiser/ofxXmlSettings/tinyxml.cpp
	new file:   artvertiser/ofxXmlSettings/tinyxml.h
	new file:   artvertiser/ofxXmlSettings/tinyxmlerror.cpp
	new file:   artvertiser/ofxXmlSettings/tinyxmlparser.cpp
	modified:   garfeild/lightcalib/lightmap.cpp
	modified:   garfeild/lightcalib/lightmap.h
	modified:   garfeild/viewsets/planar_object_recognizer.cpp
	modified:   garfeild/viewsets/planar_object_recognizer.h

--- a/artvertiser/Makefile
+++ b/artvertiser/Makefile
@@ -50,7 +50,7 @@ am_artvertiser_OBJECTS = artvertiser-artvertiser.$(OBJEXT) \
 	artvertiser-multithreadcapture.$(OBJEXT)
 artvertiser_OBJECTS = $(am_artvertiser_OBJECTS) 
 artvertiser_DEPENDENCIES = ../garfeild/libgarfeild.a \
-	../starter/libstarter.a FProfiler/libfprofiler.a MatrixTracker/libMatrixTracker.a
+	../starter/libstarter.a FProfiler/libfprofiler.a MatrixTracker/libMatrixTracker.a ofxXmlSettings/libofxXmlSettings.a
 artvertiser_LINK = $(CXXLD) $(artvertiser_CXXFLAGS) $(CXXFLAGS) \
 	$(AM_LDFLAGS) $(LDFLAGS) -o $@
 DEFAULT_INCLUDES = -I. -I$(top_builddir)
@@ -189,7 +189,7 @@ top_srcdir = ..
 #openglprogs = 
 openglprogs = artvertiser
 artvertiser_CXXFLAGS = -I/usr/local/include/opencv   -I../garfeild -I../starter
-artvertiser_LDADD = -L/usr/local/lib -lcxcore -lcv -lhighgui -lcvaux -lml FProfiler/libfprofiler.a  ../garfeild/libgarfeild.a ../starter/libstarter.a MatrixTracker/libMatrixTracker.a \
+artvertiser_LDADD = -L/usr/local/lib -lcxcore -lcv -lhighgui -lcvaux -lml FProfiler/libfprofiler.a  ../garfeild/libgarfeild.a ../starter/libstarter.a ofxXmlSettings/libofxXmlSettings.a MatrixTracker/libMatrixTracker.a \
 		 -lGLEW -lGL  -lm
 
 artvertiser_SOURCES = artvertiser.cpp calibmodel.cpp calibmodel.h \
