--- a/artvertiser/Makefile
+++ b/artvertiser/Makefile
@@ -78,12 +78,12 @@ AUTOMAKE = ${SHELL} /home/julian/devel/The-Artvertiser/missing --run automake-1.
 AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
-CFLAGS = -g -O3 -mtune=native -msse3
+CFLAGS = -g -O3 -mtune=native -msse3 -arch i386
 CPP = gcc -E
 CPPFLAGS = -I/usr/include/freetype2
 CXX = g++
 CXXDEPMODE = depmode=gcc3
-CXXFLAGS = -g -O3 -mtune=native -msse3
+CXXFLAGS = -g -O3 -mtune=native -msse3 -arch i386
 CYGPATH_W = echo
 DEFS = -DHAVE_CONFIG_H
 DEPDIR = .deps
@@ -92,9 +92,11 @@ ECHO_N = -n
 ECHO_T = 
 EGREP = /bin/grep -E
 EXEEXT = 
-GLEW_LIBS = -lGLEW -lGL -lglut -lftgl -lm
+GLEW_LIBS = -lGLEW -framework OpenGL -framework GLUT -lftgl -lm
+# GLEW_LIBS = -lGLEW -lGL -lglut -lftgl -lm
 GLUT_CFLAGS = -pthread
-GLUT_LIBS = -lglut  -lSM -lICE -lXmu -lXi  -lGLU -lGL  -lm
+# GLUT_LIBS = -lglut  -lSM -lICE -lXmu -lXi  -lGLU -lGL  -lm
+GLUT_LIBS = -framework GLUT
 GLU_CFLAGS = -pthread
 GLU_LIBS = -lGLU -lGL  -lm
 GL_CFLAGS = -pthread
@@ -107,7 +109,8 @@ INSTALL_SCRIPT = ${INSTALL}
 INSTALL_STRIP_PROGRAM = $(install_sh) -c -s
 LDFLAGS = 
 LIBOBJS = 
-LIBS = -lglut -lftgl
+#LIBS = -lglut -lftgl -lboost_thread
+LIBS = -lftgl -lboost_thread -framework GLUT
 LTLIBOBJS = 
 MAKEINFO = ${SHELL} /home/julian/devel/The-Artvertiser/missing --run makeinfo
 MKDIR_P = /bin/mkdir -p
@@ -190,7 +193,7 @@ top_srcdir = ..
 openglprogs = artvertiser
 artvertiser_CXXFLAGS = -I/usr/local/include/opencv   -I../garfeild -I../starter
 artvertiser_LDADD = -L/usr/local/lib -lcxcore -lcv -lhighgui -lcvaux -lml FProfiler/libfprofiler.a  ../garfeild/libgarfeild.a ../starter/libstarter.a ofxXmlSettings/libofxXmlSettings.a MatrixTracker/libMatrixTracker.a \
-		 -lGLEW -lGL  -lm
+		 -lGLEW -framework OpenGL -lm -lboost_thread
 
 artvertiser_SOURCES = artvertiser.cpp calibmodel.cpp calibmodel.h \
 		 multigrab.h multigrab.cpp multithreadcapture.cpp multithreadcapture.h
