added win32 icon
	new file:   artvertiser.ico
	new file:   artvertiser.rc
	modified:   artvertiser_win_cb.cbp

--- a/artvertiser_win_cb.cbp
+++ b/artvertiser_win_cb.cbp
@@ -177,6 +177,9 @@
 		<Unit filename="..\..\..\addons\ofxXmlSettings\libs\tinyxmlparser.cpp" />
 		<Unit filename="..\..\..\addons\ofxXmlSettings\src\ofxXmlSettings.cpp" />
 		<Unit filename="..\..\..\addons\ofxXmlSettings\src\ofxXmlSettings.h" />
+		<Unit filename="artvertiser.rc">
+			<Option compilerVar="WINDRES" />
+		</Unit>
 		<Unit filename="artvertiser\Artvert.cpp" />
 		<Unit filename="artvertiser\Artvert.h" />
 		<Unit filename="artvertiser\ArtvertList.cpp" />
